fixing the weird white space

--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,8 @@ main {
 
 .hero-img img {
   animation: alternate infinite 1s shadow-animation;
+  height: 50%;
+  width: 50%;
 }
 
 @keyframes shadow-animation {
@@ -236,7 +238,12 @@ button {
     justify-content: center;
     gap: 3rem;
   }
-  .text,
+  .text {
+    width: 100%;
+    min-height: 50vh;
+    padding: 0;
+    margin: 0;
+  }
   .hero-img {
     width: 100%;
     height: 50vh;
@@ -249,7 +256,6 @@ button {
     align-items: center;
   }
   .hero-img img {
-    transform: scale(0.9);
     width: 100%;
     height: 100%;
   }
